fix game over modal overflow

--- a/src/components/game-over/game-over-button.module.css
+++ b/src/components/game-over/game-over-button.module.css
@@ -12,6 +12,7 @@
     text-transform: uppercase;
     text-overflow: ellipsis;
     overflow: hidden;
+    white-space: nowrap;
     width: 100%;
 }
 
