--- a/src/components/play/play.module.css
+++ b/src/components/play/play.module.css
@@ -76,6 +76,9 @@
         --min-sidebar: 15rem;
         --max-sidebar: min(calc(var(--board-width) - calc(var(--player-info-height) * 2)),20rem); 
     }
+    .board {
+        position: static;
+    }
 }
 
 @media only screen and (max-width: 768px) and (orientation: portrait){
